Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
1.1.0
-
None
Description
'remote_replica copy' seems to ask the source server for its bound address, but that address is likely to be a wildcard in a real cluster. It then sends a faulty request like:
tablet_id: "834e7673f32e4802bdf26f9fff9162ef" copy_peer_uuid: "893679e1b1dd4342bf1fb8f058ec2789" copy_peer_addr { host: "0.0.0.0" port: 7050 }
resulting in: UNKNOWN_ERROR: Invalid wildcard address to tablet copy from: 0.0.0.0 (resolved to 0.0.0.0)